<!--
  ~ Copyright (c) 2015. Simas Abramovas
  ~
  ~ This file is part of VideoClipper.
  ~
  ~ VideoClipper is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ VideoClipper is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with VideoClipper. If not, see <http://www.gnu.org/licenses/>.
  -->
<resources>
	<string name="app_name">Video Clipper</string>

	<string name="title_section1">Section 1</string>
	<string name="title_section2">Section 2</string>
	<string name="title_section3">Section 3</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_example">Example action</string>

	<string name="action_settings">Settings</string>

	<!--Single words-->
	<string name="concatenation">Concatenation</string>
	<string name="audio">Audio</string>
	<string name="video">Video</string>

	<!--Errors-->
	<string name="error">Error</string>
	<string name="app_dir_creation_failed">App directory creation failed!</string>
	<string name="app_data_not_found">App data couldn\'t be found! Try re-installing the
		app.</string>
	<string name="app_dir_no_space">App directory doesn\'t have enough space!</string>
	<string name="formatted_action_interrupted">%s was interrupted! Please try again.</string>
	<string name="ffprobe_fail">Couldn\'t fetch information about this video</string>
	<string name="start">START</string>
	<string name="length">LENGTH</string>
	<string name="end">END&#160;&#160;&#160;&#160;</string>
	<string name="semicolon">:</string>
	<string name="start_changer">Change the start time</string>
	<string name="duration_changer">Change the duration</string>
	<string name="end_changer">Change the end time</string>
	<string name="timeline_arrow_descriptor">arrow</string>
	<string name="timeline_line_descriptor">line</string>
	<string name="ok">OKAY</string>
	<string name="action_add_item">Add item</string>
	<string name="preview_image_description">preview image</string>
	<string name="header_image_description">header image</string>
	<string name="file_type_image_description">File type image</string>
	<string name="file_chooser_up">..</string>
	<string name="nav_context_menu">Something</string>
	<string name="nav_context_menu_action_remove">Remove</string>
	<string name="nav_context_menu_action_duplicate">Duplicate</string>
	<string name="nav_context_menu_action_select_all">Select all</string>
	<string name="nav_context_menu_action_select_none">Select none</string>
	<string name="action_concat">Merge</string>
	<string name="clipping">Clipping videos…</string>
	<string name="initialising">Initialising…</string>
	<string name="vc_working">Video Clipper is working…</string>
	<string name="vc_failed">Video Clipper has failed…</string>
	<string name="vc_finished">Video Clipper finished!</string>
	<string name="format_click_to_open_video">Click to open %s!</string>
	<string name="out_of">out of</string><!--e.g. 00:00:05 out of 00:02:32-->
	<string name="item_preview_description">Item Preview</string>
	<string name="filename_info">Filename:</string>
	<string name="duration_info">Duration:</string>
	<string name="size_info">Size:</string>

	<!--Helpers-->
	<string name="help_add_item">You can add items here!</string>
	<string name="help_concatenate">Once you have 2 or more items, you can clip them!</string>
	<string name="add_item_helper_arrow_description">Pointing to add item button!</string>
	<string name="drawer_helper_arrow_description">Pointing to the drawer!</string>
	<string name="help_drawer">Slide to see the added items!</string>
	<string name="help_drawer_no_videos">Slide to open the item list!</string>


	<string name="clipped_see_notification">Clipping successful! See the notification.</string>
	<string name="clipping_failed_see_notification">Clipping failed… See the notification for
		more information</string>

	<!--ProgressActivity-->
	<string name="close">Close</string>
	<string name="current_frame">Current frame:</string>
	<string name="fps">Speed (FPS):</string>
	<string name="total_size">File size:</string>
	<string name="total_duration">Total duration:</string>
	<string name="current_duration">Current duration:</string>
	<string name="format_clipping_succeeded">Clipping %s succeeded!</string>
	<string name="open">Open</string>
	<string name="open_below">Click the button below to open the clipped video!</string>
	<string name="output_name">Output name:</string>
	<string name="unknown_error">Unknown error</string>
	<string name="format_parse_failed">Couldn\'t parse file %s, please try again…</string>
	<string name="format_clipping_failed">Unfortunately %s couldn\'t be clipped…</string>
	<string name="the_file">the file</string>
	<string name="try_again">Please try again…</string>
	<string name="megabyte">mb</string>
	<string name="hour_short">h</string>
	<string name="minute_short">m</string>
	<string name="second_short">s</string>
	<string name="player_play_button">Player\'s play button</string>
	<string name="error_smiley">Dead smiley</string>
	<string name="zero_time">00:00:00</string>
	<string name="video_preview">Video preview</string>
	<string name="retry_image">Retry…</string>

	<!--VCExceptions-->
    <string name="concat_at_least_2_videos">Must provide at least 2 videos!</string>
    <string name="concat_some_not_valid">Concatenation cancelled! Some items are invalid or are
	    still being processed.</string>
    <string name="file_duration_invalid">File duration must be valid!</string>
    <string name="file_name_invalid">File name must be valid!</string>
    <string name="file_size_invalid">File size must be valid!</string>
    <string name="stream_no_codec">Streams must have a codec!</string>
    <string name="video_stream_width_invalid">Video stream width must be valid!</string>
    <string name="video_stream_height_invalid">Video stream height must be valid!</string>
    <string name="input_not_found">Input file doesn\'t exist!</string>
    <string name="tmp_not_created">Temporary file couldn\'t be created! Please try again.</string>
    <string name="audioless_unsupported">Sorry but audio-less files are not supported.</string>
    <string name="videoless_unsupported">Sorry but video-less files are not supported.</string>
</resources>