<!--
  ~ Copyright (c) 2015. Simas Abramovas
  ~
  ~ This file is part of VideoClipper.
  ~
  ~ VideoClipper is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ VideoClipper is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with VideoClipper. If not, see <http://www.gnu.org/licenses/>.
  -->
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/player_container"
	android:focusableInTouchMode="true"
	android:focusable="true"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/player_container_bg"
	tools:context=".PlayerFragment">
	<SurfaceView
	    android:id="@+id/player_surface"
	    android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

	<!--Preview overlay to hide the surface. Invisible by default.-->
	<ImageView
		android:background="@color/player_container_bg"
		android:id="@+id/preview"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:contentDescription="@string/video_preview"/>

	<fragment
		android:id="@+id/controls"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:name="com.simas.vc.editor.player.Controls"
		tools:layout="@layout/fragment_player_controls"/>

	<RelativeLayout
		android:id="@+id/error_overlay"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="invisible">
		<ImageView
			android:background="@color/player_container_bg"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:src="@drawable/dead_smiley"
			android:contentDescription="@string/error_smiley"/>
		<ImageButton
			android:id="@+id/retry"
			android:src="@drawable/ic_action_replay"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:scaleType="centerCrop"
			android:layout_centerInParent="true"
			android:contentDescription="@string/retry_image"/>
	</RelativeLayout>
</RelativeLayout>