<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	android:id="@+id/editor_actions"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:visibility="invisible">
	<com.simas.vc.editor.LabeledLinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		custom:label="Info"
		custom:containerPadding="10dp"
		custom:containerStrokeColor="@color/indigo"
		custom:labelColor="@color/blue"
		custom:labelSize="21sp"
		custom:labelHorizontalPadding="5dp">
		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TableRow
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:text="@string/filename_info"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="match_parent"/>

				<TextView
					android:id="@+id/filename_value"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="match_parent"/>
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:text="@string/size_info"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="match_parent"/>

				<TextView
					android:id="@+id/size_value"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="match_parent"/>
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:text="@string/duration_info"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="match_parent"/>

				<TextView
					android:id="@+id/duration_value"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="match_parent"/>
			</TableRow>
		</TableLayout>
	</com.simas.vc.editor.LabeledLinearLayout>

	<com.simas.vc.editor.LabeledLinearLayout
		android:id="@+id/stream_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="0dp"
		custom:label="Streams"
		custom:containerPadding="10dp"
		custom:containerStrokeColor="@color/indigo"
		custom:labelColor="@color/blue"
		custom:labelSize="21sp"
		custom:labelHorizontalPadding="5dp"/>

	<com.simas.vc.editor.LabeledLinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		custom:label="Crop"
		custom:containerPadding="10dp"
		custom:containerStrokeColor="@color/indigo"
		custom:labelColor="@color/blue"
		custom:labelSize="21sp"
		custom:labelHorizontalPadding="5dp">
	</com.simas.vc.editor.LabeledLinearLayout>

	<com.simas.vc.editor.LabeledLinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		custom:label="Cut"
		custom:containerPadding="10dp"
		custom:containerStrokeColor="@color/indigo"
		custom:labelColor="@color/blue"
		custom:labelSize="21sp"
		custom:labelHorizontalPadding="5dp">
	</com.simas.vc.editor.LabeledLinearLayout>
</LinearLayout>